--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,12 @@ body{
   font-family: 'Roboto', sans-serif;
   color: #000000;
   background-color: #EEEEEE;
-  box-sizing: border-box;
+  margin: 0;
+  width: 100%;
 }
 
 h1{
+  font-weight: normal;
   font-size: 64px;
   text-align: center;
   color: #007765;
@@ -31,6 +33,7 @@ h1{
 .content{
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .block1{
@@ -44,14 +47,11 @@ h1{
 .block1 h1{
   font-size: 72px;
   color: #FFFFFF;
+  margin: auto;
 }
 
 .block2{
   padding: 48px 57px 92px 55px;
-}
-
-.block2 p{
-  padding-top: 16px; /* не работает, текст прилипает с h1 и др абзацам */
 }
 
 .block3{
@@ -64,6 +64,7 @@ h1{
 .block3 p{
   font-size: 48px;
   color: #FFFFFF;
+  margin: auto;
   text-align: center;
 }
 
@@ -92,21 +93,10 @@ h1{
   margin-bottom:30px;
 }
 
-.member h1{
-  text-align: center;
-  font-size: 24px;
-}
-
-.member span{
-  display: block;
-  font-style: italic;
-  font-size: 18px;
-}
-
-/*.block_team h1{
+.block_team h1{
   margin: auto;
   padding: 0px 0px 56px 0px;
-}*/
+}
 
 .block_team img{
   width: 168px;
